# gridlab-d

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  ABOUT.txt  BUILD  BuildingGridlabdOnWindowsWithMsys2.docx  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  LICENSE  Makefile.am  MinGW_Eclipse_Instructions.docx  README-LINUX  README-MACOSX  README-WINDOWS.txt  README.md  RELEASE  RELEASE_PIPELINE.md  STATUS  VERSION  aminclude.mk  archive_failed_tests.py  automake.bat  build_installer.py  checkpkgs  clean_autotest.sh  commitNotes_ptm.txt  compare-sources  configure.ac  configure.bat  configure.opt  custom.mk  customize  generate_troubleshooting.sh  gridlabd-64.iss  gridlabd.spec.in  issue_template.md  license_gld_compiled.txt  (+15 more)
assert/: CMakeLists.txt  Makefile.am  Makefile.mk  assert.cpp  assert.h  assert.vcproj  complex_assert.cpp  complex_assert.h  double_assert.cpp  double_assert.h  enum_assert.cpp  enum_assert.h  gld_assert.cpp  gld_assert.h  init.cpp  int_assert.cpp  int_assert.h
climate/: CMakeLists.txt  Makefile.am  Makefile.mk  climate.cpp  climate.h  climate.vcproj  csv_reader.cpp  csv_reader.h  init.cpp  main.cpp  solar_angles.cpp  solar_angles.h  test.cpp  test.h  weather.cpp  weather.h  weather_reader.cpp  weather_reader.h
comm/: Makefile.am  Makefile.mk  comm.h  comm.vcproj  init.cpp  main.cpp  mpi_network.cpp  mpi_network.h  network.cpp  network.h  network_interface.cpp  network_interface.h  network_message.cpp  network_message.h
commercial/: CMakeLists.txt  Commercial-module-user-guide.docx  Makefile.am  Makefile.mk  building.cpp  building.h  commercial.cpp  commercial.h  commercial.vcproj  commercial_exception.hpp  commercial_library.hpp  commercial_object.cpp  commercial_object.hpp  hvac.cpp  hvac.h  hvacmodel.hpp  init.cpp  main.cpp  multizone.cpp  multizone.h  office.cpp  office.h  regression_equation.cpp  regression_equation.hpp  solvers.cpp  solvers.h
connection/: CMakeLists.txt  Makefile.mk  cache.cpp  cache.h  client.cpp  client.h  connection.cpp  connection.h  connection.pptx  connection.vcproj  fncs_msg.cpp  fncs_msg.cpp.bak  fncs_msg.h  fncs_msg.h.bak  helics_msg.cpp  helics_msg.h  init.cpp  jsmn.c  jsmn.h  json.cpp  json.h  json_link_demo.py  main.cpp  message.h  native.cpp  native.h  server.cpp  server.h  socket.cpp  socket.h  tcp.cpp  tcp.h  transport.cpp  transport.h  udp.cpp  udp.h  validate.no  varmap.cpp  varmap.h  xml.cpp  (+1 more)
control/: CMakeLists.txt  Makefile.mk  control.vcproj  init.cpp  main.cpp  ss_model.cpp  ss_model.h
core/: GUI.MACOSX  Makefile.am  Makefile.mk  aggregate.c  aggregate.h  class.c  class.h  cmdarg.c  cmdarg.h  cmex.c  cmex.h  compare.c  compare.h  complex.h  config.h  console.h  convert.c  convert.cpp  convert.h  core.vcproj  debug.c  debug.h  deltamode.c  deltamode.h  enduse.c  enduse.h  environment.c  environment.h  exception.c  exception.h  exec.c  exec.h  find.c  find.h  gld_sock.h  globals.c  globals.h  gridlabd  gridlabd-2_0.xsl  gridlabd.conf  (+102 more)
debug/: Makefile.am  Makefile.mk  debug.cpp  debug.h  debug.vcproj  gldebug.cpp  gldebug.h  gldebug.vcproj  init.cpp  main.cpp
generators/: CMakeLists.txt  EXPERIMENTAL  Makefile.am  Makefile.mk  battery.cpp  battery.h  cblock.cpp  cblock.h  central_dg_control.cpp  central_dg_control.h  controller_dg.cpp  controller_dg.h  dc_dc_converter.cpp  dc_dc_converter.h  dc_link.cpp  dc_link.h  diesel_dg.cpp  diesel_dg.h  diesel_dg_cd.cpp  diesel_dg_cd.h  energy storage.cpp  energy_storage.cpp  energy_storage.h  generators.h  generators.vcproj  ibr_blackbox.cpp  ibr_blackbox.h  ibr_gfl.cpp  ibr_gfl.h  ibr_gfm_drp.cpp  ibr_gfm_drp.h  ibr_gfm_vsm.cpp  ibr_gfm_vsm.h  ibr_graybox.cpp  ibr_graybox.h  ibr_skeleton.cpp  ibr_skeleton.h  init.cpp  inverter.cpp  inverter.h  (+26 more)
gldcore/: .gitignore  CMakeLists.txt  LICENSE  Makefile.mk  aggregate.c  aggregate.cpp  aggregate.h  build.h.in  class.c  class.cpp  class.h  cmake_config.h.in  cmdarg.c  cmdarg.cpp  cmdarg.h  cmex.c  cmex.cpp  cmex.h  compare.c  compare.cpp  complex.h  config.h.in  console.h  convert.cpp  convert.h  core.vcproj  cpp_threadpool.cpp  cpp_threadpool.h  daemon.cpp  daemon.h  debug.c  debug.cpp  debug.h  deltamode.c  deltamode.cpp  deltamode.h  enduse.c  enduse.cpp  enduse.h  environment.c  (+157 more)
market/: CMakeLists.txt  Makefile.am  Makefile.mk  auction.cpp  auction.h  auction_ccsi.cpp  auction_ccsi.h  bid.cpp  bid.h  bid_ccsi.cpp  bid_ccsi.h  collect.cpp  collect.h  controller.cpp  controller.h  controller2.cpp  controller2.h  controller_ccsi.cpp  controller_ccsi.h  curve.cpp  curve.h  curve_ccsi.cpp  curve_ccsi.h  double_controller.cpp  double_controller.h  generator_controller.cpp  generator_controller.h  init.cpp  main.cpp  market.h  market.vcproj  passive_controller.cpp  passive_controller.h  stub_bidder.cpp  stub_bidder.h  stubauction.cpp  stubauction.h  supervisory_control.cpp  supervisory_control.h  test_market_passive_controller_RAMP_mode_matching_period.glm  (+1 more)
mysql/: CMakeLists.txt  MYSQL_specific.vsprops  Makefile.am  Makefile.mk  collector.cpp  collector.h  database.cpp  database.h  group_recorder.cpp  group_recorder.h  init.cpp  main.cpp  mysql.vcproj  player.cpp  player.h  query_engine.cpp  query_engine.h  recorder.cpp  recorder.h  table_manager.cpp  validate.no
network/: Makefile.am  Makefile.mk  capbank.cpp  capbank.h  check.cpp  export.cpp  fuse.cpp  fuse.h  generator.cpp  generator.h  globals.c  import.cpp  link.cpp  link.h  main.cpp  meter.cpp  meter.h  network.cpp  network.h  network.vcproj  node.cpp  node.h  pw_load.cpp  pw_load.h  pw_model.cpp  pw_model.h  pw_recorder.cpp  pw_recorder.h  regulator.cpp  regulator.h  relay.cpp  relay.h  transformer.cpp  transformer.h  varmap.c
old_autobuild_scripts/: Makefile.am  README-OLD_BUILD_SCRIPTS.txt  aminclude.am  configure.ac
optimize/: CMakeLists.txt  Makefile.mk  init.cpp  main.cpp  optimize.h  optimize.vcproj  particle_swarm_optimization.cpp  particle_swarm_optimization.h  simple.cpp  simple.h
plc/: Makefile.am  Makefile.mk  comm.cpp  comm.h  init.cpp  machine.cpp  machine.h  main.cpp  plc.cpp  plc.h  plc.vcproj  plc_test.h  test.cpp
(+4726 files in other folders)
